gobmkida/c1/print_eye
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/print_eye/src/engine/optics.c:1325:23: error: use of undeclared identifier 'unk_48AEB8'
v29 = ( const char *)&unk_48AEB8; 
                      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/print_eye/src/engine/optics.c:1331:17: error: use of undeclared identifier 'off_48AEB0'
v29 = ( char *)&off_48AEB0 + 4; 
                ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/print_eye/src/engine/optics.c:1334:26: error: use of undeclared identifier 'off_48AEB0'
gprintf( ( const char *)&off_48AEB0); 
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/print_eye/src/obj/1/optics.o] Error 1
